--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                     <li><a href="#about"><i class="icon-user"></i>About</a></li>
                                     <li><a href="#portfolio"><i class="icon-camera"></i>Gallery</a></li>
                                     <li><a href="#contact"><i class="icon-address"></i>Address</a></li>
-                                    <li><a href="#share"><i class="icon-share"></i>Share</a></li>
+
                                 </ul>
 
                             </nav>
@@ -173,7 +173,7 @@
                             <ul class="social">
                                 <li><a href="tel:+919744172272"><i class="fa fa-phone" style="font-size:20px"></i></a></li>
                                 <li><a href="https://wa.me/+919497771373"><i class="fa fa-whatsapp" style="font-size:20px"></i></a></li>
-                              
+
                                 <li><a href="mailto:jooshavelavoor@gmail.com "><i class="fa fa-envelope" style="font-size:20px"></i></a></li>
 
 
@@ -209,7 +209,7 @@
                         <!--About -->
                         <div class="about">
 
-                            <!--Main title-->
+                            <!--Main title
 
                             <div class="main-title">
                                 <h1>About Me</h1>
@@ -222,7 +222,7 @@
                                     </div>
                                 </div>
                             </div>
-
+-->
                             <!--End main title-->
 
 
@@ -243,7 +243,7 @@
                                     <!--Row-->
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <p>   High Court of Kerala, District Court Centre, Thiruvananthapuram
+                                            <p>   High Court of Kerala, <br> District Court Centre,<br> Thiruvananthapuram
 
                                             </p>
                                         </div>
@@ -301,7 +301,7 @@
 
 
                             <div class="main-title">
-                                <h1>career history</h1>
+                                <h1>career history</h1>    <!--
                                 <div class="divider">
                                     <div class="zigzag large clearfix " data-svg-drawing="yes">
                                         <svg xml:space="preserve" viewBox="0 0 69.172 14.975" width="37" height="28" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" version="1.1">
@@ -313,7 +313,7 @@
                             </div>
 
 
-                            <!--End main title-->
+                        -->
 
 
 
@@ -376,14 +376,14 @@
 
 
                                                         </div>
-                                                        <p>Experienced in title deed verification as acquired by offering expert legal opinion Banks. </p>
+                                                        <p>Experienced in title deed verification as acquired by offering expert legal opinion to Banks. </p>
                                                     </div>
                                                     <div class="exp">
                                                         <div class="hgroup">
 
 
                                                         </div>
-                                                        <p>Handling cases before various courts for and  on behalf of the New India Assurance  Company & The United India Insurance Co. Ltd since  in addition to other regular works. </p>
+                                                        <p>Experienced in handling cases before various courts for and on behalf of Corporate Clients. </p>
                                                     </div>
                                                     <div class="exp">
                                                         <div class="hgroup">
@@ -421,7 +421,7 @@
 
 
                             <div class="main-title">
-                                <h1>key skills</h1>
+                                <h1>key skills</h1><!--
                                 <div class="divider">
                                     <div class="zigzag large clearfix " data-svg-drawing="yes">
                                         <svg xml:space="preserve" viewBox="0 0 69.172 14.975" width="37" height="28" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" version="1.1">
@@ -432,8 +432,7 @@
                                 </div>
                             </div>
 
-
-                            <!--End main title-->
+-->
 
 
 
@@ -562,7 +561,7 @@
 
 
                             <div class="main-title">
-                                <h1>Services</h1>
+                                <h1>Services</h1><!--
                                 <div class="divider">
                                     <div class="zigzag large clearfix " data-svg-drawing="yes">
                                         <svg xml:space="preserve" viewBox="0 0 69.172 14.975" width="37" height="28" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" version="1.1">
@@ -573,7 +572,7 @@
                                 </div>
                             </div>
 
-
+-->
 
 
 
@@ -934,14 +933,6 @@
                                     <!--Button-->
                                     <div class="button margTop ofsInTop tCenter">
 
-                                        <div class="divider">
-                                            <div class="zigzag large clearfix " data-svg-drawing="yes">
-                                                <svg xml:space="preserve" viewBox="0 0 69.172 14.975" width="37" height="28" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" version="1.1">
-		<path d="M1.357,12.26 10.807,2.81 20.328,12.332
-			29.781,2.879 39.223,12.321 48.754,2.79 58.286,12.321 67.815,2.793 "  style="stroke-dasharray: 93.9851, 93.9851; stroke-dashoffset: 0;"/>
-		</svg>
-                                            </div>
-                                        </div>
 
 
                                         <!--Row-->
@@ -1173,18 +1164,6 @@
                     </section>
                     <!--End portfolio tab-->
 
-
-                    <section style="padding-left: 25%;">
-                        <div id="share" class="a2a_kit a2a_kit_size_32 a2a_default_style" style="align: center;">
-
-                            <a class="a2a_button_facebook"></a>
-                            <a class="a2a_button_whatsapp"></a>
-                            <a class="a2a_button_google_gmail"></a>
-                            <a href="sms:?body=https://e-bizcard.live/joosha/"><span class="iconify" font-size="24px" data-icon="vs-sms" data-inline="false"></span></a>
-                            <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-                        </div>
-                        <script async src="https://static.addtoany.com/menu/page.js"></script>
-                    </section>
 
 
 
