--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
                         <div class="bottom-header bgWhite ofsTSmall ofsBSmall tCenter">
                             <ul class="social">
-                                <li><a href="tel:+919744172272"><i class="fa fa-phone" style="font-size:20px"></i></a></li>
+                                <li><a href="tel:+91 9497771373"><i class="fa fa-phone" style="font-size:20px"></i></a></li>
                                 <li><a href="https://wa.me/+919497771373"><i class="fa fa-whatsapp" style="font-size:20px"></i></a></li>
 
                                 <li><a href="mailto:jooshavelavoor@gmail.com "><i class="fa fa-envelope" style="font-size:20px"></i></a></li>
@@ -1009,14 +1009,7 @@
 
                             <div class="main-title">
                                 <h1>Gallery</h1>
-                                <div class="divider">
-                                    <div class="zigzag large clearfix " data-svg-drawing="yes">
-                                        <svg xml:space="preserve" viewBox="0 0 69.172 14.975" width="37" height="28" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" version="1.1">
-			<path d="M1.357,12.26 10.807,2.81 20.328,12.332
-				29.781,2.879 39.223,12.321 48.754,2.79 58.286,12.321 67.815,2.793 "  style="stroke-dasharray: 93.9851, 93.9851; stroke-dashoffset: 0;"/>
-			</svg>
-                                    </div>
-                                </div>
+
                             </div>
 
                             <!--End main title-->
@@ -1056,19 +1049,7 @@
 
 
                                         <!--Row-->
-                                        <div class="row">
 
-                                            <div class="divider-m tCenter margTSSmall margBSmall clearfix">
-                                                <div class="col-md-12">
-                                                    <div class="zigzag medium clearfix " data-svg-drawing="yes">
-                                                        <svg xml:space="preserve" viewBox="0 0 69.172 14.975" width="45" height="5" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" version="1.1">
-	<path d="M1.357,12.26 10.807,2.81 20.328,12.332
-		29.781,2.879 39.223,12.321 48.754,2.79 58.286,12.321 67.815,2.793 "  style="stroke-dasharray: 93.9851, 93.9851; stroke-dashoffset: 0;"/>
-	</svg>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
                                         <!--End row-->
 
 
@@ -1130,14 +1111,7 @@
                             <!--Button-->
                             <div class="button ofsInTop tCenter clearfix">
 
-                                <div class="divider">
-                                    <div class="zigzag large clearfix " data-svg-drawing="yes">
-                                        <svg xml:space="preserve" viewBox="0 0 69.172 14.975" width="37" height="28" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" version="1.1">
-		<path d="M1.357,12.26 10.807,2.81 20.328,12.332
-			29.781,2.879 39.223,12.321 48.754,2.79 58.286,12.321 67.815,2.793 "  style="stroke-dasharray: 93.9851, 93.9851; stroke-dashoffset: 0;"/>
-		</svg>
-                                    </div>
-                                </div>
+                                
 
 
                                 <!--Row-->
@@ -1241,7 +1215,7 @@ State of Kerala     <br>
                                                             </li>
                                                             <li>
                                                                 <div class="ico"><i class="icon-phone"></i></div>
-                                                                <p>Tel : +91 9497771373</p>
+                                                                <p>Tel : +91 9744172272</p>
                                                             </li>
                                                             <!--
                                                             <li>
