--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
 
                                                         </div>
-                                                        <p>Personal counselling in family disputes and family court cases helping reunion, reconciliation or navigate the court system.</p>
+                                                        <p>Personal counselling in family disputes and family court cases helping reunion and reconciliation or navigate the court system.</p>
                                                     </div>
 
                                                     <!--End experience-->
@@ -1111,7 +1111,7 @@
                             <!--Button-->
                             <div class="button ofsInTop tCenter clearfix">
 
-                                
+
 
 
                                 <!--Row-->
