--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 
                                                     <div class="det">
 
-                                                        <p>Helping self-represented litigants navigate the court system and drafting legal arguments and pleadings.</p>
+                                                        <p>Helping self-represented litigants navigate the court system.</p>
                                                     </div>
 
                                                 </div>
@@ -624,17 +624,6 @@
 
 
 
-                                                <div class="col-md-4">
-                                                    <div class="ico">
-                                                        <i class="fa fa-balance-scale" style="font-size:24px"></i>
-                                                    </div>
-
-                                                    <div class="det">
-                                                        <p>Deputising for legal colleagues in their absence.</p>
-
-                                                    </div>
-
-                                                </div>
 
 
 
@@ -1162,7 +1151,7 @@
 
                             <div class="main-title">
                                 <h1>Address</h1>
-                                
+
                             </div>
 
                             <!--End main title-->
