--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
 
                                                         </div>
-                                                        <p>Talented professional with over 22 years of legal experience.</p>
+                                                        <p>Professional with over 22 years of legal experience.</p>
                                                     </div>
                                                     <div class="exp">
                                                         <div class="hgroup">
@@ -516,7 +516,7 @@
 
 
                                                         </div>
-                                                        <p>EGood written and spoken communication skills.</p>
+                                                        <p>Good written and spoken communication skills.</p>
                                                     </div>
                                                     <div class="exp">
                                                         <div class="hgroup">
