--- a/index.html
+++ b/index.html
@@ -420,7 +420,9 @@
                             <!--End content-->
 
 
-                            <div class="main-title">
+                            <div class="main-title" style="
+    padding-left: 0px;
+">
                                 <h1>key skills</h1><!--
                                 <div class="divider">
                                     <div class="zigzag large clearfix " data-svg-drawing="yes">
@@ -560,7 +562,9 @@
 
 
 
-                            <div class="main-title">
+                            <div class="main-title" style="
+    padding-left: 0px;
+">
                                 <h1>Services</h1><!--
                                 <div class="divider">
                                     <div class="zigzag large clearfix " data-svg-drawing="yes">
